--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
           suscipit cupiditate, ea corporis ducimus quis possimus, a sunt nihil
-          molestiae!.
+          molestiae!
         </p>
         <a href="#" class="cta">Beli sekarang</a>
       </main>
