--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <nav class="navbar" data-aos="fade-down" data-aos-duration="1000">
+    <nav id="navigasi" class="navbar" data-aos="fade-down" data-aos-duration="1000">
       <a href="#" class="logo-navbar">Muhammad<span>Alfin</span>.</a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
@@ -28,7 +28,7 @@
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
         <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
-        <a href="#" id="menu-burger"><i data-feather="menu"></i></a>
+        <a href="#navigasi" id="menu-burger"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <section class="hero" id="home">
